try fix dragging on mobile

--- a/src/global-styles/styles.scss
+++ b/src/global-styles/styles.scss
@@ -87,9 +87,9 @@ body.Dark-theme.thmFintatechDarkTheme {
   background: #06060D;
 }
 
-.tcdToolbarItemWrapper {
-  margin-top: 14px;
-}
+// .tcdToolbarItemWrapper {
+//   margin-top: 14px;
+// }
 
 .tcdToolbarCompare,.tcdToolbarExport, .tcdTradePanel {
   display:none !important;  
